--- a/app/rpg_battlemap/priv/www/partials/map_tool_buttons.html
+++ b/app/rpg_battlemap/priv/www/partials/map_tool_buttons.html
@@ -9,14 +9,14 @@
 
 
 <div class="btn-group" ng-controller="AddCombatantToolCtrl">
-	<button class="btn btn-small" ng-class="{'active':toolName == 'Add Combatant'}" ng-click="setTool()">{{ name_base }}</button>
+	<button class="btn btn-small" ng-class="{'active':toolName == 'Add Combatant'}" ng-click="setTool()">{{ combatant.name_base }}</button>
 	<button class="btn btn-small dropdown-toggle" data-toggle="dropdown" ng-click="setTool()">
 		<span class="caret"></span>
 	</button>
 	<div ng-click="stopPropagation($event)" class="dropdown-menu">
 		<tabset>
 
-			<tab select="token_image_url=false;">
+			<tab select="combatant.token_image = false;">
 				<tab-heading>
 					<i class="icon-edit"> </i>
 				</tab-heading>
@@ -25,27 +25,27 @@
 
 					<li>
 						<label for="newCombatantName">Name</label>
-						<input type="text" ng-model="name_base" name="newCombatantName" ng-click="stopPropagation($event)" />
+						<input type="text" ng-model="combatant.name_base" name="newCombatantName" ng-click="stopPropagation($event)" />
 					</li>
 
 					<li>
 						<label for="newCombatantSize">Size</label>
-						<input ng-model="size" name="newCombatantSize" ng-click="stopPropagation($event)" type="number" step="1" min="1" max="10" />
+						<input ng-model="combatant.size" name="newCombatantSize" ng-click="stopPropagation($event)" type="number" step="1" min="1" max="10" />
 					</li>
 
 					<li>
 						<label for="newCombatantColor">Color</label>
-						<input ng-model="color" name="newCombatantColor" ng-click="stopPropagation($event)" type="color" />
+						<input ng-model="combatant.color" name="newCombatantColor" ng-click="stopPropagation($event)" type="color" />
 					</li>
 
 					<li>
 						<label for="newCombatantAuraSize">Aura Size</label>
-						<input ng-model="aura_size" name="newCombatantAuraSize" ng-click="stopPropagation($event)" type="number" step="1" min="0" max="20" />
+						<input ng-model="combatant.aura_size" name="newCombatantAuraSize" ng-click="stopPropagation($event)" type="number" step="1" min="0" max="20" />
 					</li>
 
 					<li>
 						<label for="newCombatantAuraColor">Aura Color</label>
-						<input ng-model="aura_color" name="newCombatantAuraColor" ng-click="stopPropagation($event)" type="color" />
+						<input ng-model="combatant.aura_color" name="newCombatantAuraColor" ng-click="stopPropagation($event)" type="color" />
 					</li>
 
 				</ul>
@@ -57,7 +57,7 @@
 					<i class="icon-heart"> </i>
 				</tab-heading>
 
-				<ul ng-controller="ListCharactersCtrl">
+				<ul>
 
 					<li ng-repeat="character in characters" ng-click="setNewCombatantFrom(character)">
 						<img ng-src="{{character.token_image_url}}" width="24" height="24" style="border: 5px solid {{character.color}}" />({{character.size}}) {{character.name}}
