fixed minor visual issues

--- a/app/rpg_battlemap/priv/www/partials/map_tool_buttons.html
+++ b/app/rpg_battlemap/priv/www/partials/map_tool_buttons.html
@@ -84,5 +84,5 @@
 </div>
 
 <button class="btn btn-small" title="Collapse controls" data-toggle="collapse" data-target="#top-bar" ng-click="handleToggle()">
-	<i ng-class="{'open': 'icon-double-angle-down', 'closed': 'icon-double-angle-up'}[topBarToggle]"></i>
+	<i ng-class="{'open': 'icon-chevron-up', 'closed': 'icon-chevron-down'}[topBarToggle]"></i>
 </button>
