--- a/app/rpg_battlemap/priv/www/css/override.css
+++ b/app/rpg_battlemap/priv/www/css/override.css
@@ -77,3 +77,15 @@ button.close
 {
     float: none;
 }
+
+.btn-group>.btn:first-child.dropdown-toggle
+{
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
+}
+
+.btn-group>.btn:last-of-type.dropdown-toggle
+{
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+}
