Fixed zone list not showing up for owner

--- a/app/rpg_battlemap/priv/www/partials/map_toolbar.html
+++ b/app/rpg_battlemap/priv/www/partials/map_toolbar.html
@@ -127,7 +127,7 @@
 
 				</tab>
 
-				<tab ng-show="user = map.owner">
+				<tab ng-show="user == map.owner">
 					<tab-heading>
 						<i class="icon-road"> </i>
 					</tab-heading>
