--- a/app/rpg_battlemap/priv/www/css/override.css
+++ b/app/rpg_battlemap/priv/www/css/override.css
@@ -89,3 +89,9 @@ button.close
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
 }
+
+.btn-toolbar.pull-right .dropdown-menu
+{
+	right: 0;
+	left: auto;
+}
