--- a/app/rpg_battlemap/priv/www/partials/grid.html
+++ b/app/rpg_battlemap/priv/www/partials/grid.html
@@ -141,10 +141,10 @@
 
                 <!-- The aura -->
                 <rect
-                  ng-attr-x="{{ (combatant.x - combatant.aura_size) * 32 }}"
-                  ng-attr-y="{{ (combatant.y - combatant.aura_size) * 32 }}"
-                  ng-attr-width="{{ (combatant.size + 2 * combatant.aura_size) * 32 }}"
-                  ng-attr-height="{{ (combatant.size + 2 * combatant.aura_size) * 32 }}"
+                  ng-attr-x="{{ ((combatant.x - combatant.aura_size) * 32) + 2 }}"
+                  ng-attr-y="{{ ((combatant.y - combatant.aura_size) * 32) + 2 }}"
+                  ng-attr-width="{{ ((combatant.size + 2 * combatant.aura_size) * 32) - 4 }}"
+                  ng-attr-height="{{ ((combatant.size + 2 * combatant.aura_size) * 32) - 4 }}"
                   ng-attr-fill="{{combatant.aura_color}}"
                   fill-opacity="{{ 0.3 * ( combatant.aura_size > 0) }}"
                   ng-attr-stroke="{{combatant.aura_color}}"
@@ -156,39 +156,39 @@
 
                 <!-- Combatant rectangle itself -->
                 <rect
-                  ng-attr-x="{{combatant.x * 32}}"
-                  ng-attr-y="{{combatant.y * 32}}"
-                  ng-attr-width="{{combatant.size * 32}}"
-                  ng-attr-height="{{combatant.size * 32}}"
+                  ng-attr-x="{{(combatant.x * 32) + 2}}"
+                  ng-attr-y="{{(combatant.y * 32) + 2}}"
+                  ng-attr-width="{{(combatant.size * 32) - 4}}"
+                  ng-attr-height="{{(combatant.size * 32) - 4}}"
                   ng-attr-fill="{{combatant.color}}"
                   rx="16"
                   ng-mousedown="selectCombatant(combatant, $event)"
                   stroke="{{combatant.color}}"
-                  stroke-width="{{5 * combatant.invisible}}"
+                  stroke-width="{{(5 * combatant.invisible) + (2 * !combatant.invisible)}}"
                   fill-opacity="{{ 1 - (combatant.invisible) }}"
                 />
 
                 <!-- Combatants that have token images -->
                 <image
                     xlink:href="{{combatant.token_image}}"
-                    ng-attr-x="{{combatant.x * 32}}"
-                    ng-attr-y="{{combatant.y * 32}}"
-                    ng-attr-width="{{combatant.size * 32}}"
-                    ng-attr-height="{{combatant.size * 32}}"
+                    ng-attr-x="{{(combatant.x * 32) + 2}}"
+                    ng-attr-y="{{(combatant.y * 32) + 2}}"
+                    ng-attr-width="{{(combatant.size * 32) - 4}}"
+                    ng-attr-height="{{(combatant.size * 32) - 4}}"
                     pointer-events="none"
                     style="mask: url(#mask-{{combatant.id}})"
                 />
 
                 <!-- if selected, the rotating border -->
                 <rect
-                  ng-attr-x="{{combatant.x * 32}}"
-                  ng-attr-y="{{combatant.y * 32}}"
-                  ng-attr-width="{{combatant.size * 32}}"
-                  ng-attr-height="{{combatant.size * 32}}"
+                  ng-attr-x="{{(combatant.x * 32) + 2}}"
+                  ng-attr-y="{{(combatant.y * 32) + 2}}"
+                  ng-attr-width="{{(combatant.size * 32) - 4}}"
+                  ng-attr-height="{{(combatant.size * 32) - 4}}"
                   fill="none"
                   rx="16"
                   stroke="blue"
-                  stroke-width="7"
+                  stroke-width="5"
                   stroke-dasharray="15 5"
                   ng-show="combatant == combatants.selected"
                 >
