--- a/app/rpg_battlemap/templates/base.html
+++ b/app/rpg_battlemap/templates/base.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 	<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
 	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-	<meta name="viewpot" content="width=divice-width, initial-scale=1.0" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link type="text/css" href="/css/battlemap.css" rel="stylesheet" />
 	<link type="text/css" href="/css/persona-buttons.css" rel="stylesheet" />
 	<link type="text/css" href="/css/override.css" rel="stylesheet" />
